--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <title>AACBB - Workshop on Accelerator Architecture for Computational Biology and Bioinformatics</title>
 
@@ -235,7 +236,8 @@
                     <h5 class="subheading">9:00-10:00</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">(Talk abstract placeholder)</p>
+                    <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                    <p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>
                   </div>
                 </div>
               </li>
@@ -251,7 +253,7 @@
                         <h5 class="subheading">13:30-14:30</h5>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">(Talk abstract placeholder)</p>
+                        <p class="text-muted"><strong>Talk abstract: </strong> TBD</p>
                     </div>
                 </div>
             </li>
@@ -277,7 +279,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/Leonid.jpg" alt="">
               <h4>Leonid Yavits</h4>
-              <p class="oranizer-email">leonid@technion.ac.il</p>
+              <p class="oranizer-email">yavits@technion.ac.il</p>
                 <p class="text-left"><strong>Short bio:</strong> Leonid received his MSc and PhD in Electrical Engineering from the Technion. After graduating, he co-founded VisionTech where he co-designed a single chip MPEG2 codec. Following VisionTech’s acquisition by Broadcom, he co-founded Horizon Semiconductors where he co-designed a Set Top Box on chip for cable and satellite TV. <br>
                     Leonid is a postdoc fellow in Electrical Engineering in the Technion. He co-authored a number of patents and research papers on SoC and ASIC. His research interests include non von Neumann computer architectures and processing in memory</p>
             </div>
