--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="intro-heading">Accelerator Architecture for Computational Biology and Bioinformatics</div>
 
             </div>
-            <h3 class="padding-bottom-10">February 24th, 2018</h3>
-            <h3 class="padding-bottom-10">Vienna, Austria</h3>
+            <h3 class="heading-subtitle">February 24th, 2018</h3>
+            <h3 class="heading-subtitle">Vienna, Austria</h3>
         </div>
     </header>
 
