--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">HPCA 2018 Workshop on</div>
-                <div class="intro-heading">Accelerator Architecture for Computational Biology and Bioinformatics</div>
+                <div class="intro-heading">Accelerator Architecture in Computational Biology and Bioinformatics</div>
 
             </div>
             <h3 class="heading-subtitle">February 24th, 2018</h3>
