Added links to personal pages

--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
                 <div class="col-sm-2"></div>
                 <div class="col-lg-8 ">
                     <h2 class="section-heading text-center">Program Committee</h2>
-                    <ul>
-                        <li>Ananth Kalyanaraman, WSU</li>
-                        <li>Bertil Schmidt, University of Mainz</li>
-                        <li>Can Alkan, Bilkent University</li>
-                        <li>Engin Ipek, University of Rochester</li>
-                        <li>Jason Cong, UCLA</li>
-                        <li>Mattan Erez, UT Austin</li>
-                        <li>Mircea Stan, UVA</li>
-                        <li>Onur Mutlu, ETH/CMU</li>
-                        <li>Ran Ginosar, Technion</li>
-                        <li>Srinivas Aluru, Georgia Tech</li>
-                        <li>Yuan Xie, UCSB</li>
+                    <ul id="program-committee-list">
+                        <li><a href="http://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, WSU</a></li>
+                        <li><a href="http://www.staff.uni-mainz.de/schmi033/">Bertil Schmidt, University of Mainz</a></li>
+                        <li><a href="http://www.cs.bilkent.edu.tr/~calkan/">Can Alkan, Bilkent University</a></li>
+                        <li><a href="http://www.cs.rochester.edu/~ipek/Home.html">Engin Ipek, University of Rochester</a></li>
+                        <li><a href="http://vast.cs.ucla.edu/people/faculty/jason-cong">Jason Cong, UCLA</a></li>
+                        <li><a href="http://lph.ece.utexas.edu/merez/MattanErez/Home">Mattan Erez, UT Austin</a></li>
+                        <li><a href="http://www.ece.virginia.edu/faculty/stan.html">Mircea Stan, UVA</a></li>
+                        <li><a href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH/CMU</a></li>
+                        <li><a href="http://webee.technion.ac.il/~ran/">Ran Ginosar, Technion</a></li>
+                        <li><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></li>
+                        <li><a href="http://www.ece.ucsb.edu/~yuanxie/">Yuan Xie, UCSB</a></li>
                     </ul>
                 </div>
             </div>
@@ -222,44 +222,87 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-              <h2 class="padding-bottom-20">Keynote Speakers</h2>
-            <ul class="timeline">
+                <h2 class="padding-bottom-20">Keynote Talks</h2>
+                <ul class="timeline">
 
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/speakers/omutlu.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
-                    <h3 class="subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
-                    <h5 class="subheading">9:00-10:00</h5>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
-                    <p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>
-                  </div>
-                </div>
-              </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/omutlu.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
+                                <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
+                                <h5 class="subheading">9:00-10:00</h5>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
+                            </div>
+                        </div>
+                    </li>
 
-            <li class="timeline-inverted">
-                <div class="timeline-image">
-                    <img class="rounded-circle img-fluid" src="img/speakers/Srinivas.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                    <div class="timeline-heading">
-                        <h4><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></h4>
-                        <h3 class="subheading">“Automata Processor and its Applications in Bioinformatics”</h3>
-                        <h5 class="subheading">13:30-14:30</h5>
-                    </div>
-                    <div class="timeline-body">
-                        <p class="text-muted"><strong>Talk abstract: </strong> TBD</p>
-                    </div>
-                </div>
-            </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/Srinivas.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></h4>
+                                <h3 class="keynote-subheading">“Automata Processor and its Applications in Bioinformatics”</h3>
+                                <h5 class="subheading">13:30-14:30</h5>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
 
-            </ul>
-          </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="padding-bottom-20">Invited Talks</h2>
+                <ul class="timeline">
+
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/Bertil.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a  href="http://www.staff.uni-mainz.de/schmi033/">Bertil Schmidt, JGU Mainz</a></h4>
+                                <h3 class="keynote-subheading">“Next Generation Sequencing: Big Data meets High Performance Computing Architectures”</h3>
+                                <h5 class="subheading">10:00-10:30</h5>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/Ananth.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a href="http://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, WSU</a></h4>
+                                <h3 class="keynote-subheading">Title: TBD</h3>
+                                <h5 class="subheading">14:30-15:00</h5>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
+
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
       </div>
     </section>
