Small image corrections

--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
-                                <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
+                                <!--<p class="text-muted bio-text"><strong>Short bio: </strong> Onur Mutlu is a Full Professor of Computer Science at ETH Zurich. He previously held the William D. and Nancy W. Strecker Early Career Professorship at Carnegie Mellon University, and is also a faculty member there. His current broader research interests are in computer architecture, systems, and bioinformatics. He is especially interested in interactions across domains and between applications, system software, compilers, and microarchitecture, with a major current focus on memory and storage systems. He obtained his PhD and MS in ECE from the University of Texas at Austin and BS degrees in Computer Engineering and Psychology from the University of Michigan, Ann Arbor. His industrial experience spans starting the Computer Architecture Group at Microsoft Research (2006-2009), and various product and research positions at Intel Corporation, Advanced Micro Devices, and VMware. He received the inaugural IEEE Computer Society Young Computer Architect Award, the inaugural Intel Early Career Faculty Award, faculty partnership awards from various companies, and a healthy number of best paper or "Top Pick" paper recognitions at various computer systems and architecture venues. His computer architecture course lectures and materials are freely available on YouTube, and his research group makes software artifacts freely available online.</p>-->
+
                             </div>
                         </div>
                     </li>
@@ -255,7 +256,6 @@
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
                                 <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
-
                             </div>
                         </div>
                     </li>
