Added download link

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                     </ul>
 
                     <h2>Submission Guidelines</h2>
-                    <h6>Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
+                    <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
                         <a href="https://easychair.org/conferences/?conf=aacbb2018">https://easychair.org/conferences/?conf=aacbb2018</a>
-                    </h6>
+                    </h5>
+                    <h6>For a PDF version of the CFP click here: <a href="img/AACBB.Call.for.Papers.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p>
                     <p>The full version should be a PDF file in HPCA24 submission format. For formatting instructions please refer to:
                         <a href="http://hpca2018.ece.ucsb.edu/pages/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
