--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-                <h2 class="padding-bottom-20">Keynote Talks</h2>
+                <h2 class="padding-bottom-15">Keynote Talks</h2>
                 <ul class="timeline">
 
                     <li class="timeline-inverted">
@@ -265,7 +265,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="padding-bottom-20">Invited Talks</h2>
+                <h2 class="padding-bottom-15 padding-top-40">Invited Talks</h2>
                 <ul class="timeline">
 
                     <li class="timeline-inverted">
