--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://hpca2018.ece.ucsb.edu/" target="_blank">HPCA 2018</a>
+            </li>
 
           </ul>
         </div>
