Change of template

--- a/index.html
+++ b/index.html
@@ -39,22 +39,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#cfp">Call for Papers</a>
+              <a class="nav-link js-scroll-trigger" href="#cfp">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#program-committee">Program Committee</a>
+              <a class="nav-link js-scroll-trigger" href="#program-committee">Talks</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a>
+              <a class="nav-link js-scroll-trigger" href="#schedule">Cool Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="http://hpca2018.ece.ucsb.edu/" target="_blank">HPCA 2018</a>
+              <a class="nav-link" href="http://hpca2018.ece.ucsb.edu/" target="_blank">Google Scholar Page</a>
             </li>
 
           </ul>
@@ -66,12 +63,10 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">HPCA 2018 Workshop on</div>
-                <div class="intro-heading">Accelerator Architecture in <br> Computational Biology and Bioinformatics</div>
-
+                <div class="intro-lead-in">Roman Kaplan</div>
             </div>
-            <h3 class="heading-subtitle">February 24th, 2018</h3>
-            <h3 class="heading-subtitle">Vienna, Austria</h3>
+            <h3 class="heading-subtitle">PhD Candidate</h3>
+            <h3 class="heading-subtitle">Electrical Engineering, Technion</h3>
         </div>
     </header>
 
@@ -80,10 +75,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">About</h2>
-            <h3 class="about-text">Over the last decade, the advent of high-throughput sequencing techniques brought an exponential growth in biosequence database sizes. With increased throughput demand and popularity of computational biology tools, reducing time-to-solution during computational analysis has become a significant challenge in the path to scientific discovery.<br>
-                <br>Conventional computer architecture is proven to be inefficient for computational biology and bioinformatics tasks. For example, aligning even several hundred DNA or protein sequences using progressive multiple alignment tools consumes several CPU hours on high performance computer. Hence, computational biology and bioinformatics rely on hardware accelerators to allow processing to keep up with the increasing amount of data generated from biology applications.<br>
-                <br>    In a typical application, dominant portion of the runtime is spent in a small number of computational kernels, making it an excellent target for hardware acceleration. The combination of increasingly large datasets and high performance computing requirements make computational biology prime candidate to benefit from accelerator architecture research. Potential directions include 3D integration, near-data processing, automata processing, associative processing and reconfigurable architectures.<br>
+            <h2 class="section-heading">About Me</h2>
+            <h3 class="about-text">I am a PhD candidate at the faculty of Electrical Engineering at the Technion. My advisor is <a href="http://webee.technion.ac.il/~ran/">Prof. Ran Ginosar</a>.<br>
+                <br><br>My research area is computer architectures for large-scale computations, including big data machine learning, computational biology and bioinformatics.<br>
+
             </h3>
           </div>
         </div>
