Fixed submisiso deadline

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </p>
 
                     <h2>Important Dates</h2>
-                    <h5>Submission deadline: <del>November 30, 2017.</del> <u>Thursday, December 14t, 2017. </u></h5>
+                    <h5>Submission deadline: <del>November 30, 2017.</del> <u>Friday, December 15, 2017. </u></h5>
                     <h5>Notification by: <u>December 20, 2017.</u></h5>
                 </div>
             </div>
