Extended submission deadline

--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
                     </p>
 
                     <h2>Important Dates</h2>
-                    <h5>Submission deadline: <del>November 30, 2017.</del> <u>Friday, December 15, 2017. </u></h5>
-                    <h5>Notification by: <u>December 20, 2017.</u></h5>
+                    <h5>Submission deadline: <del>November 30, 2017.</del>
+                        <del>December 15, 2017.</del>
+                        <u>Monday, December 18, 2017</u> (extended due to a special request).</h5>
+                    <h5>Notification by: <u>December 21, 2017.</u></h5>
                 </div>
             </div>
         </div>
