--- a/index.html
+++ b/index.html
@@ -175,51 +175,63 @@
                         <th></th>
                     </tr>
                     <tr>
-                        <td>8:45 - 9:00</td>
+                        <td>8:30 - 8:40</td>
                         <td>Opening Remarks</td>
                     </tr>
                     <tr>
-                        <td>9:00 - 10:00</td>
+                        <td>8:40 - 9:20</td>
                         <td>Keynote 1 - Onur Mutlu: “Accelerating Genome Analysis: A Primer on an Ongoing Journey”</td>
                     </tr>
                     <tr>
+                        <td>11:00 - 12:00</td>
+                        <td>Paper session #1&nbsp;&nbsp;(2 regular papers)</td>
+                    </tr>
+                    <tr>
                         <td>10:00 - 10:30</td>
+                        <td>Coffee break</td>
+                    </tr>
+                    <tr>
+                        <td>10:30 - 11:10</td>
                         <td>Invited Talk - Bertil Schmidt: “Next Generation Sequencing: Big Data meets High Performance Computing Architectures”</td>
                     </tr>
                     <tr>
-                        <td>10:30 - 11:00</td>
-                        <td>Break</td>
+                        <td>11:10 - 12:10</td>
+                        <td>Paper session #2&nbsp;&nbsp;(3 regular papers)</td>
                     </tr>
                     <tr>
-                        <td>11:00 - 12:00</td>
-                        <td>Paper session 1 (3 papers)</td>
-                    </tr>
-                    <tr>
-                        <td>12:00 - 13:30</td>
+                        <td>12:10 - 13:30</td>
                         <td>Lunch</td>
                     </tr>
                     <tr>
-                        <td>13:30 - 14:30</td>
+                        <td>13:30 - 14:10</td>
                         <td>Keynote 2 - Srinivas Aluru: “Automata Processor and its Applications in Bioinformatics”</td>
                     </tr>
                     <tr>
-                        <td>14:30 - 15:10</td>
-                        <td>Paper Session 2 (2 papers)</td>
+                        <td>14:10 - 15:10</td>
+                        <td>Paper Session #3&nbsp;&nbsp;(3 papers)</td>
                     </tr>
                     <tr>
                         <td>15:10 - 15:30</td>
-                        <td>Break</td>
+                        <td>Coffee break</td>
                     </tr>
                     <tr>
                         <td>15:30 - 16:10</td>
-                        <td>Paper session 3 (2 papers)</td>
+                        <td>Invited Talk - Can Alkan: "Addressing Computational Burden to Realize Precision Medicine"</td>
                     </tr>
                     <tr>
                         <td>16:10 - 16:50</td>
-                        <td>Invited Talk - Can Alkan</td>
+                        <td>Paper session #4&nbsp;&nbsp;(2 regular papers)</td>
                     </tr>
                     <tr>
                         <td>16:50 - 17:00</td>
+                        <td>Short break</td>
+                    </tr>
+                    <tr>
+                        <td>17:00 - 17:45</td>
+                        <td>Paper session #5&nbsp;&nbsp;(3 short papers) </td>
+                    </tr>
+                    <tr>
+                        <td>17:45 - 17:50</td>
                         <td>Closing remarks</td>
                     </tr>
                 </table>
