Updated invited talks times

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <div class="timeline-heading">
                                 <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
                                 <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
-                                <h5 class="subheading">9:00-10:00</h5>
+                                <h5 class="subheading">8:40 - 9:20</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
@@ -269,7 +269,7 @@
                             <div class="timeline-heading">
                                 <h4><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></h4>
                                 <h3 class="keynote-subheading">“Automata Processor and its Applications in Bioinformatics”</h3>
-                                <h5 class="subheading">13:30-14:30</h5>
+                                <h5 class="subheading">13:30-14:10</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
@@ -293,7 +293,7 @@
                             <div class="timeline-heading">
                                 <h4><a  href="http://www.staff.uni-mainz.de/schmi033/">Bertil Schmidt, JGU Mainz</a></h4>
                                 <h3 class="keynote-subheading">“Next Generation Sequencing: Big Data meets High Performance Computing Architectures”</h3>
-                                <h5 class="subheading">10:00-10:30</h5>
+                                <h5 class="subheading">10:30-11:10</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
@@ -310,7 +310,7 @@
                             <div class="timeline-heading">
                                 <h4><a href="http://www.cs.bilkent.edu.tr/~calkan/">Can Alkan, Bilkent University</a></h4>
                                 <h3 class="keynote-subheading">"Addressing Computational Burden to Realize Precision Medicine"</h3>
-                                <h5 class="subheading">16:10-16:50</h5>
+                                <h5 class="subheading">15:30-16:10</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
