Added initial schedule

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
           </div>
         </div>
         <div class="row padding-bottom-20">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10">
                 <table id="scheulde-table" class="table-striped table-responsive table-hover">
                     <tr>
                         <th style="width:120px"></th>
@@ -180,60 +180,136 @@
                     </tr>
                     <tr>
                         <td>8:40 - 9:20</td>
-                        <td>Keynote 1 - Onur Mutlu: “Accelerating Genome Analysis: A Primer on an Ongoing Journey”</td>
+                        <td><strong>Keynote 1: Onur Mutlu <br>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</strong></td>
+                    </tr>
+                    <!-- Paper session 1 (2 regular papers) -->
+                    <tr>
+                        <td>09:20 - 09:40</td>
+                        <td>Mohammed Alser, Hasan Hassan, Akash Kumar, Onur Mutlu and Can Alkan
+                            <br><i>Exploring Speed/Accuracy Trade-offs</i></td>
                     </tr>
                     <tr>
-                        <td>11:00 - 12:00</td>
-                        <td>Paper session #1&nbsp;&nbsp;(2 regular papers)</td>
+                        <td>09:20 - 09:40</td>
+                        <td>Lisa Wu, Frank Nothaft, Brendan Sweeney, David Bruns-Smith, Sagar Karandikar, Johnny Le, Howard Mao, Krste Asanovic, David Patterson and Anthony Joseph
+                            <br><i>Accelerating Duplicate Marking In The Cloud</i></td>
                     </tr>
+
+                    <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td>10:00 - 10:30</td>
                         <td>Coffee break</td>
-                    </tr>
-                    <tr>
+                    <tr><td><br></td><td><br></td></tr>
+
                         <td>10:30 - 11:10</td>
-                        <td>Invited Talk - Bertil Schmidt: “Next Generation Sequencing: Big Data meets High Performance Computing Architectures”</td>
+                        <td><strong>Invited Talk: Bertil Schmidt
+                            <br>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</strong></td>
+                    </tr>
+
+                    <!-- Paper session 2 (3 regular papers) -->
+                    <tr>
+                        <td>11:10 - 11:30</td>
+                        <td>Wenqin Huangfu, Zhenhua Zhu, Xing Hu, Yu Wang and Yuan Xie
+                            <br><i>GAME: GPU Acceleration of Metagenomics Clustering</i></td>
                     </tr>
                     <tr>
-                        <td>11:10 - 12:10</td>
-                        <td>Paper session #2&nbsp;&nbsp;(3 regular papers)</td>
+                        <td>11:30 - 11:50</td>
+                        <td>Jose M. Herruzo, Sonia Gonzalez-Navarro, Pablo Ibañez, Victor Viñals, Jesus Alastruey and Oscar Plata
+                            <br><i>Exact Alignment with FM-index on the Intel Xeon Phi Knights Landing Processor</i></td>
                     </tr>
+                    <tr>
+                        <td>11:50 - 12:10</td>
+                        <td>Zheming Jin and Kazutomo Yoshii
+                            <br><i>Optimizations of Sequence Alignment on FPGA: A Case Study of Extended Sequence Alignment</i></td>
+                    </tr>
+
+                    <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td>12:10 - 13:30</td>
                         <td>Lunch</td>
                     </tr>
+                    <tr><td><br></td><td><br></td></tr>
+
                     <tr>
                         <td>13:30 - 14:10</td>
-                        <td>Keynote 2 - Srinivas Aluru: “Automata Processor and its Applications in Bioinformatics”</td>
+                        <td><strong>Keynote 2: Srinivas Aluru
+                            <br>“Automata Processor and its Applications in Bioinformatics”</strong></td>
+                    </tr>
+
+                    <!-- Paper session 3 (3 regular papers) -->
+                    <tr>
+                        <td>14:10 - 14:30</td>
+                        <td>Tommy Tracy Ii, Jack Wadden, Kevin Skadron and Mircea Stan
+                            <br><i>Streaming Gap-Aware Seed Alignment on the Cache Automaton</i></td>
                     </tr>
                     <tr>
-                        <td>14:10 - 15:10</td>
-                        <td>Paper Session #3&nbsp;&nbsp;(3 papers)</td>
+                        <td>14:30 - 14:50</td>
+                        <td>Roman Kaplan, Leonid Yavits and Ran Ginosar
+                            <br><i>Processing-in-Storage Architecture for Large-Scale Biological Sequence Alignment</i></td>
                     </tr>
+                    <tr>
+                        <td>14:50 - 15:10</td>
+                        <td>Xueqi Li, Guangming Tan, Yuanrong Wang and Ninghui Sun
+                            <br><i>The Genomic Benchmark Suite: Characterization and Architecture Implications</i></td>
+                    </tr>
+
+                    <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td>15:10 - 15:30</td>
                         <td>Coffee break</td>
                     </tr>
+                    <tr><td><br></td><td><br></td></tr>
+
+
                     <tr>
                         <td>15:30 - 16:10</td>
-                        <td>Invited Talk - Can Alkan: "Addressing Computational Burden to Realize Precision Medicine"</td>
+                        <td>Invited Talk: Can Alkan
+                            <br>"Addressing Computational Burden to Realize Precision Medicine"</td>
+                    </tr>
+
+                    <!-- Paper session 4 (2 regular papers) -->
+                    <tr>
+                        <td>16:10 - 16:30</td>
+                        <td>Sergiu Mosanu
+                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i></td>
                     </tr>
                     <tr>
-                        <td>16:10 - 16:50</td>
-                        <td>Paper session #4&nbsp;&nbsp;(2 regular papers)</td>
+                        <td>16:30 - 16:50</td>
+                        <td>Angélica Alejandra Serrano-Rubi
+                            <br><i>Towards BIMAX: Binary Inclusion-MAXimal parallel implementation for gene expression analysis</i></td>
                     </tr>
+
+
+                    <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td>16:50 - 17:00</td>
                         <td>Short break</td>
                     </tr>
+                    <tr><td><br></td><td><br></td></tr>
+
+                    <!-- Paper session 3 (3 regular papers) -->
                     <tr>
-                        <td>17:00 - 17:45</td>
-                        <td>Paper session #5&nbsp;&nbsp;(3 short papers) </td>
+                        <td>14:10 - 14:30</td>
+                        <td>Meysam Taassori
+                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i></td>
                     </tr>
+                    <tr>
+                        <td>14:30 - 14:50</td>
+                        <td>Meysam Roodi
+                            <br><i>Gene Sequencing: Where Time Goes</i></td>
+                    </tr>
+                    <tr>
+                        <td>14:50 - 15:10</td>
+                        <td>Calvin Bulla
+                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i></td>
+                    </tr>
+
+                    <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td>17:45 - 17:50</td>
                         <td>Closing remarks</td>
                     </tr>
+                    <tr><td><br></td><td><br></td></tr>
+
                 </table>
             </div>
 
@@ -296,7 +372,16 @@
                                 <h5 class="subheading">10:30-11:10</h5>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    The progress of NGS has a major impact on medical and genomic research.
+                                    This high-throughput technology can now produce billions of short DNA fragments in excess of a few Terabytes of data in a single run.
+                                    This leads to massive datasets used by a wide range of applications including personalized cancer treatment and precision medicine.
+                                    In addition to the hugely increased throughput, the cost of using high-throughput technologies has been dramatically decreasing.
+                                    Low sequencing cost of around US$1K per genome has now rendered large population-scale projects feasible.
+                                    However, in order to make effective use of the produced data, the design of big data algorithms and their efficient implementation on modern HPC systems is required.
+                                    In this talk, I will present the design of scalable algorithms for metagenomic read classification and for massively parallel hash maps on multi-GPU nodes.
+
+                                </p>
                                 <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
                             </div>
                         </div>
