Final initial schedule (without affiliation)

--- a/index.html
+++ b/index.html
@@ -269,12 +269,12 @@
                     <!-- Paper session 4 (2 regular papers) -->
                     <tr>
                         <td>16:10 - 16:30</td>
-                        <td>Sergiu Mosanu
+                        <td>Sergiu Mosanu and Mircea Stan
                             <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i></td>
                     </tr>
                     <tr>
                         <td>16:30 - 16:50</td>
-                        <td>Angélica Alejandra Serrano-Rubi
+                        <td>Angélica Alejandra Serrano-Rubio, Amilcar Meneses-Viveros, Guillermo B. Morales-Luna and Mireya Paredes-López
                             <br><i>Towards BIMAX: Binary Inclusion-MAXimal parallel implementation for gene expression analysis</i></td>
                     </tr>
 
@@ -289,17 +289,17 @@
                     <!-- Paper session 3 (3 regular papers) -->
                     <tr>
                         <td>14:10 - 14:30</td>
-                        <td>Meysam Taassori
+                        <td>Meysam Taassori, Anirban Nag, Keeton Hodgson, Ali Shafiee and Rajeev Balasubramonian
                             <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i></td>
                     </tr>
                     <tr>
                         <td>14:30 - 14:50</td>
-                        <td>Meysam Roodi
+                        <td>Meysam Roodi and Andreas Moshovos
                             <br><i>Gene Sequencing: Where Time Goes</i></td>
                     </tr>
                     <tr>
                         <td>14:50 - 15:10</td>
-                        <td>Calvin Bulla
+                        <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto
                             <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i></td>
                     </tr>
 
