added author affiliation [work in progress]

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                     </tr>
                     <tr>
                         <td>8:40 - 9:20</td>
-                        <td><strong>Keynote 1: Onur Mutlu <br>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</strong></td>
+                        <td><strong>Keynote 1: Onur Mutlu
+                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong></td>
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
                     <tr>
@@ -202,7 +203,7 @@
 
                         <td>10:30 - 11:10</td>
                         <td><strong>Invited Talk: Bertil Schmidt
-                            <br>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</strong></td>
+                            <br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong></td>
                     </tr>
 
                     <!-- Paper session 2 (3 regular papers) -->
@@ -218,7 +219,7 @@
                     </tr>
                     <tr>
                         <td>11:50 - 12:10</td>
-                        <td>Zheming Jin and Kazutomo Yoshii
+                        <td>Zheming Jin and Kazutomo Yoshii (ANL)
                             <br><i>Optimizations of Sequence Alignment on FPGA: A Case Study of Extended Sequence Alignment</i></td>
                     </tr>
 
@@ -232,7 +233,7 @@
                     <tr>
                         <td>13:30 - 14:10</td>
                         <td><strong>Keynote 2: Srinivas Aluru
-                            <br>“Automata Processor and its Applications in Bioinformatics”</strong></td>
+                            <br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>
                     </tr>
 
                     <!-- Paper session 3 (3 regular papers) -->
@@ -263,7 +264,7 @@
                     <tr>
                         <td>15:30 - 16:10</td>
                         <td>Invited Talk: Can Alkan
-                            <br>"Addressing Computational Burden to Realize Precision Medicine"</td>
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></td>
                     </tr>
 
                     <!-- Paper session 4 (2 regular papers) -->
