--- a/index.html
+++ b/index.html
@@ -180,18 +180,18 @@
                     </tr>
                     <tr>
                         <td>8:40 - 9:20</td>
-                        <td><strong>Keynote 1: Onur Mutlu
+                        <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)
                             <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong></td>
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
                     <tr>
                         <td>09:20 - 09:40</td>
-                        <td>Mohammed Alser, Hasan Hassan, Akash Kumar, Onur Mutlu and Can Alkan
+                        <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
                             <br><i>Exploring Speed/Accuracy Trade-offs</i></td>
                     </tr>
                     <tr>
                         <td>09:20 - 09:40</td>
-                        <td>Lisa Wu, Frank Nothaft, Brendan Sweeney, David Bruns-Smith, Sagar Karandikar, Johnny Le, Howard Mao, Krste Asanovic, David Patterson and Anthony Joseph
+                        <td>Lisa Wu, Frank Nothaft, Brendan Sweeney, David Bruns-Smith, Sagar Karandikar, Johnny Le, Howard Mao, Krste Asanovic, David Patterson and Anthony Joseph (UC Berkeley)
                             <br><i>Accelerating Duplicate Marking In The Cloud</i></td>
                     </tr>
 
@@ -202,19 +202,19 @@
                     <tr><td><br></td><td><br></td></tr>
 
                         <td>10:30 - 11:10</td>
-                        <td><strong>Invited Talk: Bertil Schmidt
+                        <td><strong>Invited Talk: Bertil Schmidt (JGU Mainz)
                             <br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong></td>
                     </tr>
 
                     <!-- Paper session 2 (3 regular papers) -->
                     <tr>
                         <td>11:10 - 11:30</td>
-                        <td>Wenqin Huangfu, Zhenhua Zhu, Xing Hu, Yu Wang and Yuan Xie
+                        <td>Wenqin Huangfu+, Zhenhua Zhu*, Xing Hu+, Yu Wang* and Yuan Xie+ (+UCSB, *Tsinghua University)
                             <br><i>GAME: GPU Acceleration of Metagenomics Clustering</i></td>
                     </tr>
                     <tr>
                         <td>11:30 - 11:50</td>
-                        <td>Jose M. Herruzo, Sonia Gonzalez-Navarro, Pablo Ibañez, Victor Viñals, Jesus Alastruey and Oscar Plata
+                        <td>Jose M. Herruzo+, Sonia Gonzalez-Navarro+, Pablo Ibañez*, Victor Viñals*, Jesus Alastruey* and Oscar Plata+ (Univ. of Malaga, Univ. of Zaragoza)
                             <br><i>Exact Alignment with FM-index on the Intel Xeon Phi Knights Landing Processor</i></td>
                     </tr>
                     <tr>
@@ -232,24 +232,24 @@
 
                     <tr>
                         <td>13:30 - 14:10</td>
-                        <td><strong>Keynote 2: Srinivas Aluru
+                        <td><strong>Keynote 2: Srinivas Aluru (Georgia Tech)
                             <br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>
                     </tr>
 
                     <!-- Paper session 3 (3 regular papers) -->
                     <tr>
                         <td>14:10 - 14:30</td>
-                        <td>Tommy Tracy Ii, Jack Wadden, Kevin Skadron and Mircea Stan
+                        <td>Tommy Tracy Ii, Jack Wadden, Kevin Skadron and Mircea Stan (UVA)
                             <br><i>Streaming Gap-Aware Seed Alignment on the Cache Automaton</i></td>
                     </tr>
                     <tr>
                         <td>14:30 - 14:50</td>
-                        <td>Roman Kaplan, Leonid Yavits and Ran Ginosar
+                        <td>Roman Kaplan, Leonid Yavits and Ran Ginosar (Technion)
                             <br><i>Processing-in-Storage Architecture for Large-Scale Biological Sequence Alignment</i></td>
                     </tr>
                     <tr>
                         <td>14:50 - 15:10</td>
-                        <td>Xueqi Li, Guangming Tan, Yuanrong Wang and Ninghui Sun
+                        <td>Xueqi Li, Guangming Tan, Yuanrong Wang and Ninghui Sun (ICT)
                             <br><i>The Genomic Benchmark Suite: Characterization and Architecture Implications</i></td>
                     </tr>
 
@@ -263,19 +263,19 @@
 
                     <tr>
                         <td>15:30 - 16:10</td>
-                        <td>Invited Talk: Can Alkan
+                        <td>Invited Talk: Can Alkan (Bilkent University)
                             <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></td>
                     </tr>
 
                     <!-- Paper session 4 (2 regular papers) -->
                     <tr>
                         <td>16:10 - 16:30</td>
-                        <td>Sergiu Mosanu and Mircea Stan
+                        <td>Sergiu Mosanu and Mircea Stan (UVA)
                             <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i></td>
                     </tr>
                     <tr>
                         <td>16:30 - 16:50</td>
-                        <td>Angélica Alejandra Serrano-Rubio, Amilcar Meneses-Viveros, Guillermo B. Morales-Luna and Mireya Paredes-López
+                        <td>Angélica Alejandra Serrano-Rubio, Amilcar Meneses-Viveros, Guillermo B. Morales-Luna and Mireya Paredes-López (CINVESTAV-IPN)
                             <br><i>Towards BIMAX: Binary Inclusion-MAXimal parallel implementation for gene expression analysis</i></td>
                     </tr>
 
@@ -290,17 +290,17 @@
                     <!-- Paper session 3 (3 regular papers) -->
                     <tr>
                         <td>14:10 - 14:30</td>
-                        <td>Meysam Taassori, Anirban Nag, Keeton Hodgson, Ali Shafiee and Rajeev Balasubramonian
+                        <td>Meysam Taassori+, Anirban Nag+, Keeton Hodgson+, Ali Shafiee* and Rajeev Balasubramonian+ (+Univ. of Utah, *Samsung Electronics)
                             <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i></td>
                     </tr>
                     <tr>
                         <td>14:30 - 14:50</td>
-                        <td>Meysam Roodi and Andreas Moshovos
+                        <td>Meysam Roodi and Andreas Moshovos (Univ. of Toronto)
                             <br><i>Gene Sequencing: Where Time Goes</i></td>
                     </tr>
                     <tr>
                         <td>14:50 - 15:10</td>
-                        <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto
+                        <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto (BSC)
                             <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i></td>
                     </tr>
 
