Fixed author affiliation

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </tr>
                     <tr>
                         <td>11:30 - 11:50</td>
-                        <td>Jose M. Herruzo+, Sonia Gonzalez-Navarro+, Pablo Ibañez*, Victor Viñals*, Jesus Alastruey* and Oscar Plata+ (Univ. of Malaga, Univ. of Zaragoza)
+                        <td>Jose M. Herruzo+, Sonia Gonzalez-Navarro+, Pablo Ibañez*, Victor Viñals*, Jesus Alastruey* and Oscar Plata+ (+Univ. of Malaga, *Univ. of Zaragoza)
                             <br><i>Exact Alignment with FM-index on the Intel Xeon Phi Knights Landing Processor</i></td>
                     </tr>
                     <tr>
