Highlight Can's talk

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 
                     <tr>
                         <td>15:30 - 16:10</td>
-                        <td>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></td>
+                        <td><strong>Invited Talk: Can Alkan (Bilkent University)
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong></td>
                     </tr>
 
                     <!-- Paper session 4 (2 regular papers) -->
